--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongo_url = mongodb+srv://admin:admin@cluster0.kgx1q.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://admin:admin@cluster0.kgx1q.mongodb.net/dealljobs?retryWrites=true&w=majority
