--- a/dealljobs-deployment.yaml
+++ b/dealljobs-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: node-web
-  name: node-web
+    io.kompose.service: dealljobs
+  name: dealljobs
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: node-web
+      io.kompose.service: dealljobs
   strategy: {}
   template:
     metadata:
@@ -21,11 +21,11 @@ spec:
         kompose.version: 1.26.1 (a9d05d509)
       creationTimestamp: null
       labels:
-        io.kompose.service: node-web
+        io.kompose.service: dealljobs
     spec:
       containers:
-        - image: node-web
-          name: node-web
+        - image: jouzu/dealljobs
+          name: dealljobs
           ports:
             - containerPort: 5000
           resources: {}
