--- a/dealljobs-service.yaml
+++ b/dealljobs-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
-    io.kompose.service: node-web
-  name: node-web
+    io.kompose.service: dealljobs
+  name: dealljobs
 spec:
   ports:
     - name: "5000"
       port: 5000
       targetPort: 5000
   selector:
-    io.kompose.service: node-web
+    io.kompose.service: dealljobs
 status:
   loadBalancer: {}
